# train-punctuality-service

./: .env.example  .gitignore  ARCHITECTURE_DECISIONS.md  PROJECT_PLAN.md  README.md  pyproject.toml  render.yaml  requirements-collector.txt  requirements.txt
.github/workflows/: daily-collection.yml
config/: calendar_data.py  constants.py  settings.py
db/: schema.sql
scripts/: health_check.sh  populate_schedule.py  rotate_log.sh  run_collector.sh  seed_data.py
src/: main.py
src/api/routes/: health.py  history.py  stations.py  trains.py
src/collector/: daily_collector.py
src/db/: database.py
src/db/repositories/: daily_run_repo.py  query_repo.py
src/prediction/: predictor.py
src/scraper/: ntes_client.py  ntes_parser.py
src/utils/: logger.py  season_utils.py  time_utils.py  user_agents.py
tests/: test_api.py  test_daily_run_repo.py  test_ntes_parser.py  test_predictor.py  test_season_utils.py  test_time_utils.py
